--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -90,6 +90,7 @@
   "active": "d43706917b382077",
   "lastOpenFiles": [
     "index.md",
+    "personal CV.md",
     "notes/sensor.md",
     "notes/light.md",
     "papers/sensor.md",
