--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "contents/AppleProRaw.md",
+            "file": "link/projects.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "contents/AppleProRaw.md",
+                "file": "link/projects.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "d43706917b382077",
   "lastOpenFiles": [
-    "contents/AppleProRaw.md",
-    "obsidian_syntax.md",
-    "index.md",
+    "link/projects.md",
+    "contents/Computer_Science/Languages/Python/syntax.md",
+    "link/papers.md",
+    "link/researchers.md",
     "link/knowledge_graph.md",
-    "CV.md",
-    "notes/daliy_notes/2022_May.md",
-    "notes/sensor.md",
-    "notes/light.md",
-    "papers/Image_Quality_Assessment.md",
-    "papers/HDR.md"
+    "contents/Physic_Subjects/Light.md",
+    "contents/Physic_Subjects/Lens.md",
+    "contents/Physic_Subjects/Sensor.md",
+    "contents/Computer_Vision/Camera_Model.md",
+    "contents/Computer_Vision/Ceypoints.md"
   ]
 }
