--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "d43706917b382077",
+        "id": "00ffbe1ba6989f78",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "contents/Digital_Image_Processing/filtering.md",
+            "file": "contents/Digital_Image_Processing/filtering/bilateral_filter.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "contents/Digital_Image_Processing/filtering.md",
+                "file": "contents/Digital_Image_Processing/filtering/bilateral_filter.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -84,19 +84,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 187
   },
-  "active": "d43706917b382077",
+  "active": "00ffbe1ba6989f78",
   "lastOpenFiles": [
-    "contents/Digital_Image_Processing/filtering.md",
-    "CV.md",
-    "contents/Physic_Subjects/Light.md",
-    "contents/Physic_Subjects/Sensor.md",
+    "contents/Digital_Image_Processing/filtering/bilateral_filter.md",
+    "contents/Deep_Learning/datasets.md",
+    "contents/Deep_Learning/norms.md",
+    "contents/Deep_Learning/net.md",
+    "contents/Deep_Learning/optimizer.md",
     "notes/daliy_notes/2022_May.md",
-    "link/papers.md",
+    "contents/Deep_Learning/loss.md",
     "link/knowledge_graph.md",
-    "contents/Physic_Subjects/illumination photometry.md",
-    "contents/Human_Visual_System/VIsual_Saliency.md",
-    "link/projects.md"
+    "obsidian_syntax.md",
+    "contents/Digital_Image_Processing/filtering/filtering.md"
   ]
 }
