--- a/docs/.obsidian/workspace
+++ b/docs/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "contents/Mathmatics/norm.md",
+            "file": "contents/Deep_Learning/norms.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "contents/Mathmatics/norm.md",
+                "file": "contents/Deep_Learning/norms.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "00ffbe1ba6989f78",
   "lastOpenFiles": [
-    "contents/Mathmatics/norm.md",
-    "contents/杂学/疫苗/疫苗的种类.md",
-    "contents/杂学/cooking/简单概念.md",
-    "contents/杂学/经济学名词/简单概念.md",
+    "contents/Deep_Learning/norms.md",
+    "contents/Deep_Learning/loss.md",
+    "link/cheatsheets.md",
     "CV.md",
-    "contents/Digital_Image_Processing/filtering/wiener_filter.md",
-    "contents/Digital_Image_Processing/filtering/filtering.md",
-    "contents/Digital_Image_Processing/filtering/bilateral_filter.md",
-    "contents/Computer_Science/Languages/Python/syntax.md",
-    "contents/Computer_Science/Languages/Cpp/basic.md"
+    "index.md",
+    "contents/interesting/AppleProRaw.md",
+    "contents/Physic_Subjects/Light.md",
+    "contents/Deep_Learning/platforms/pytorch.md",
+    "notes/daliy_notes/2022_May.md",
+    "link/reading.md"
   ]
 }
